kernel/atomgit/vboxsf 模块在 GCC 15 环境下编译失败.txt
#标题
vboxsf 模块在 GCC 15 环境下编译失败

#内核版本
OLK-6.6

#问题现象
使用 GCC 15 编译内核时，vboxsf 文件系统模块构建失败，触发编译错误导致构建过程中断。

#主要错误日志
fs/vboxsf/super.c:24:54: error: initializer-string for array of ‘unsigned char’ is too long [-Werror=unterminated-string-initialization]
   24 | static const unsigned char VBSF_MOUNT_SIGNATURE[4] = "\000\377\376\375";
      |                                                      ^~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

#问题根因
GCC 15 默认启用了 `-Werror=unterminated-string-initialization` 警告选项。代码中使用字符串字面量 `"\000\377\376\375"` 初始化长度为 4 的 `unsigned char` 数组，编译器认为该初始化器对于数组而言过长（隐含了 NUL 终止符），从而触发错误。

#解决方案
修改 `fs/vboxsf/super.c` 中 `VBSF_MOUNT_SIGNATURE` 数组的初始化方式，将字符串字面量初始化改为逐个元素显式初始化（即 `{'\000', '\377', '\376', '\375'}`），以此满足 GCC 15 的检查要求并修复构建错误。

#来源
https://atomgit.com/openeuler/kernel/commit/98f07114136c920e066941f9b67182cae728850a